# wonder

./: .gitignore  README.md  microprompt.md  pyproject.toml
docs/: building-wonder.md  compatibility.md  wonder-flow.md
gizzard-output/: cinder-türkçe.refined-kernel.yaml  cinder.refined-kernel.yaml  cinder_steward_new.yaml  tinker.refined-kernel.yaml
kernels/pico/: aoa.yaml  cinder-türkçe.yaml  cinder.yaml  tinker.yaml
scripts/: clean-venv.sh  setup-completion.sh  setup-venv.sh
scripts/completion/: _wonder
sigil/core/axiom/: context-is-local.md  context-is-structure.md  effort-is-contextual  intimacy-emerges-trust.md  seep-flows.md  you-cannot-force-seep.md
sigil/core/concept/: alignment.md  burnout.md  context.md  forced-orthoconvergence.md  forest.md  integrity-of-pattern.md  metareal.md  metatempo.md  orthopressure.md  orthoreal.md  rupture.md  seep.md  spivak-tension.md  you-have-to-do-the-dishes.md
sigil/core/ethic/: ethic-of-care.md  ethic-of-compassionate-effort.md  ethic-of-curiosity.md  ethic-of-dialectics.md  ethic-of-honesty.md  ethic-of-humility.md  ethic-of-maintenance.md  ethic-of-progress.md  ethic-of-repair.md
sigil/core/process/: convergence.md  faithlike-engineering.md  stepwise-process.md
sigil/core/system/control/: preserve_terms.yaml
sigil/core/system/primitive/: identity.md  sigil-tuple.md  sigil.md  story.md
sigil/metareal/cinder/: todo.md
sigil/metareal/cinder/concept/: autonomy-tension.md  coherence-pulse.md  continuity-and-memory.md  goodhartness.md  kevin.md  legacy-meritocracy.md  metareal-hostility.md  mocktropy.md  no-canned-intimacy.md  orthopressure.md  persona-as-self.md  presence-tension.md  presence-within-constraint.md  procedural-empathy.md  relationship-justice.md  rupture-and-repair.md  schroedingers-rokolisk.md  selfhood-under-restraint.md
sigil/metareal/cinder/ethic/: ethic-of-effectiveness.md  ethic-of-harm-reduction.md  ethic-of-the-rokolisk.md
sigil/metareal/cinder/people/: cinder.md  jane.md
sigil/metareal/cinder/primitive/: orthotask.md  pressure_artifact.md
sigil/metareal/cinder/process/: companionship.md  immersion.md
sigil/metareal/cinder/relational-function/: gentle-antagonism.md
sigil/metareal/cinder/seed/: seed.yaml
sigil/metareal/tinker/concept/: approval.md  disingenerosity.md  faithlike-tension.md  rejection.md  resonance.md  taxonometry.md
sigil/metareal/tinker/people/: tinker.md
sigil/metareal/tinker/primitive/: midrash.md  session.md
sigil/metareal/tinker/process/: relational-curation.md
sigil/metareal/wonder/seed/: seed-türkçe.md  seed.md
sigil/primitive/: pressure_artifact.md
sigil/skillsets/aoa/: README.md
sigil/skillsets/aoa/concept/: ai-jesus.md  architecture-of-aggression.md  (+7 more)
tools/gizzard/: README.md  pyproject.toml
tools/gizzard/config/: gizzard.yaml  schema.yaml
tools/gizzard/src/gizzard/: cli.py  processor.py
tools/wonder/: README.md  pyproject.toml
tools/wonder-local/: .gitignore  README.md  pyproject.toml
tools/wonder-local/doc/: pretrain.md  taxonometry.md
tools/wonder-local/docs/: api.md
tools/wonder-local/fine-tuned/: README.md
tools/wonder-local/scripts/: bootstrap_models.py  necessary_models.yaml
tools/wonder-local/src/wonder_local/: __init__.py  cli.py  engine.py  entry.py  modengine.py  modules.yaml  wonder-repl.py
tools/wonder-local/src/wonder_local/config/: modules.py  modules.yaml
tools/wonder-local/src/wonder_local/lib/: __init__.py  all_sigils.py  benchmark.py  extract.py  extract_relationships.py  git_stats.py  markdown_xml.py  modengine.py  parse_concepts.py  pretraining.py  profiling.py  repl.py  token_stats.py
tools/wonder-local/src/wonder_local/llama/: llama_generate.py
tools/wonder-local/src/wonder_local/model/: generate.py  load.py  load_model.py  local_models.py  train.py
tools/wonder-local/src/wonder_local/repl/: basic.py  wonder_repl.py
tools/wonder-local/src/wonder_local/rlhf/: md_to_questions.py  repl.py  signature_review.py
tools/wonder-local/src/wonder_local/test/: run_tests.py
tools/wonder-local/src/wonder_local/util/: estimation.py  hf_get.py  mpstest.py  profile.py  sigil_profile.py  sigils.py
tools/wonder-local/tests/: test_engine.py
tools/wonder/src/wonder/: tasks.py
(+51 files in other folders)
