[tool.poetry]
name = "wonder-local"
version = "0.1.0"
description = "Local inference engine for Wonder Framework using Mistral-7B"
authors = ["jane mf arc <jane.arc@pobox.com>"]
readme = "README.md"
packages = [{include = "wonder_local", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
transformers = { git = "https://github.com/huggingface/transformers.git", branch = "main" }
deepseek-vl = { git = "git@github.com:deepseek-ai/DeepSeek-VL.git", develop = true }
torch = "^2.2.0"
accelerate = "^0.26.1"
tokenizers = "^0.21.1"
safetensors = "^0.4.2"
huggingface-hub = "^0.30.0"
rich = "^13.7.0"
typer = "^0.9.0"
datasets = "^3.5.0"
llama-cpp-python = "^0.2.24"
sentencepiece = "^0.2.0"
protobuf = "^6.30.2"
markdown = "^3.8"
teapotai = "^1.1.1"
pydantic = "^2.11.3"
vulture = "^2.14"
spacy = "^3.8.5"
wordfreq = "^3.1.1"
bs4 = "^0.0.2"
prompt-toolkit = "^3.0.50"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/nightly"
priority = "explicit" 
