[tool.poetry]
name = "wonder"
version = "0.1.0"
description = "Wonder framework CLI tool"
authors = ["jane mf arc <jane.arc@pobox.com>"]
readme = "README.md"
packages = [{include = "wonder", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^2.2.0"
pyyaml = "^6.0.1"
rich = "^13.7.0"
gizzard = {path = "../gizzard", develop = true}

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^8.0.0"
pdoc = "^14.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wonder = "wonder.tasks:program.run" 